--- a/app/templates/layout/master.html
+++ b/app/templates/layout/master.html
@@ -21,7 +21,11 @@
 
     <link rel="stylesheet" href="{% static 'css/background-container.css' %}">
     
+    
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+    <!-- favicon -->
+    <link rel="icon" href="{% static 'favicon.ico' %}">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
@@ -31,7 +35,7 @@
     
 
     <!-- Main Content -->
-    <main class="mt-5 pt-4">
+    <main>
         {% block content %}{% endblock %}
     </main>
 
@@ -44,6 +48,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <!-- Canvas-Confetti para el efecto de partículas -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="{% static 'js/background-container.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
 
