feat: update subscription redirect and enhance message display with new partial template

--- a/app/templates/layout/master.html
+++ b/app/templates/layout/master.html
@@ -29,6 +29,7 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body>
+    {% include 'layout/partials/messages/message.html' %}
     
     <!-- Navbar -->
     {% include 'layout/partials/navbar/navbar.html' %}
