--- a/app/templates/layout/master.html
+++ b/app/templates/layout/master.html
@@ -2,12 +2,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Potencia tu negocio y destaca en el mundo digital con Innova7e. Servicios de marketing digital, diseño gráfico y desarrollo web.">
-    <meta name="keywords" content="marketing digital, diseño gráfico, desarrollo web, Innova7e">
-    <meta name="author" content="Innova7e">
-    <title>{% block title %}Innova7e{% endblock %}</title>
+    {% include 'layout/partials/meta.html' %}
+    <title>{% block title %}Innova7e{% endblock %} - Agencia de Marketing Digital, Diseño y Desarrollo Web</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -18,12 +14,9 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Custom CSS -->
-
     <link rel="stylesheet" href="{% static 'css/background-container.css' %}">
-    
-    
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-
+    
     <!-- favicon -->
     <link rel="icon" href="{% static 'favicon.ico' %}">
     {% block extra_css %}{% endblock %}
