feat: add Instagram carousel partial and update homepage template to include it

--- a/app/apps/pages/templates/pages_home.html
+++ b/app/apps/pages/templates/pages_home.html
@@ -11,7 +11,9 @@
 {% include "partials/partial_benefits.html" %}
 {% include "partials/partial_services.html" %}
 
+{% include "partials/partial_instagram_carousel.html" %}
 {% include "partials/partial_testimonials-faqs.html" %}
 {% include "partials/partial_contact.html" %}
+
 
 {% endblock %}
