--- a/app/templates/layout/master.html
+++ b/app/templates/layout/master.html
@@ -46,7 +46,7 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="{% static 'js/background-container.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
-
+    <script src="https://www.instagram.com/embed.js"></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
